# python-project-49

./: .gitignore  Makefile  README.md  demo.cast  demo2.cast  demo3.cast  demo4.cast  demo5.cast  pyproject.toml
brain_games/: default.py  general_template.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  calc.py  even.py  game_calc.py  game_even.py  game_gcd.py  game_prime.py  game_progression.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  game_calc.py  game_even.py  game_gcd.py  game_prime.py  game_progression.py
ekzemplo/: pyvenv.cfg
