[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Brain games : progression, prime, even, calc, gcd"
authors = ["Emile Aubakirov <emilaubakirov@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Korvo-iam/python-project-49"
packages = [
  { include = "brain_games" },
]


[tool.poetry.scripts]
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-prime = "brain_games.scripts.brain_prime:main"
brain-games = "brain_games.scripts.brain_games:main"
brain-progression = "brain_games.scripts.brain_progression:main"


[tool.poetry.dependencies]
python = "^3.12"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
